feat: create document vectorize
